cov/tests/test262/test/language/literals/string/S7.8.4_A4.2_T2/code.js
"use strict";
// Copyright (C) 2017 Ecma International.  All rights reserved.
// This code is governed by the BSD license found in the LICENSE file.
/*---
description: |
    Collection of assertion functions used throughout test262
defines: [assert]
---*/


function assert(mustBeTrue, message) {
  if (mustBeTrue === true) {
    return;
  }

  if (message === undefined) {
    message = 'Expected true but got ' + assert._toString(mustBeTrue);
  }
  throw new Test262Error(message);
}

assert._isSameValue = function (a, b) {
  if (a === b) {
    // Handle +/-0 vs. -/+0
    return a !== 0 || 1 / a === 1 / b;
  }

  // Handle NaN vs. NaN
  return a !== a && b !== b;
};

assert.sameValue = function (actual, expected, message) {
  try {
    if (assert._isSameValue(actual, expected)) {
      return;
    }
  } catch (error) {
    throw new Test262Error(message + ' (_isSameValue operation threw) ' + error);
    return;
  }

  if (message === undefined) {
    message = '';
  } else {
    message += ' ';
  }

  message += 'Expected SameValue(«' + assert._toString(actual) + '», «' + assert._toString(expected) + '») to be true';

  throw new Test262Error(message);
};

assert.notSameValue = function (actual, unexpected, message) {
  if (!assert._isSameValue(actual, unexpected)) {
    return;
  }

  if (message === undefined) {
    message = '';
  } else {
    message += ' ';
  }

  message += 'Expected SameValue(«' + assert._toString(actual) + '», «' + assert._toString(unexpected) + '») to be false';

  throw new Test262Error(message);
};

assert.throws = function (expectedErrorConstructor, func, message) {
  var expectedName, actualName;
  if (typeof func !== "function") {
    throw new Test262Error('assert.throws requires two arguments: the error constructor ' +
      'and a function to run');
    return;
  }
  if (message === undefined) {
    message = '';
  } else {
    message += ' ';
  }

  try {
    func();
  } catch (thrown) {
    if (typeof thrown !== 'object' || thrown === null) {
      message += 'Thrown value was not an object!';
      throw new Test262Error(message);
    } else if (thrown.constructor !== expectedErrorConstructor) {
      expectedName = expectedErrorConstructor.name;
      actualName = thrown.constructor.name;
      if (expectedName === actualName) {
        message += 'Expected a ' + expectedName + ' but got a different error constructor with the same name';
      } else {
        message += 'Expected a ' + expectedName + ' but got a ' + actualName;
      }
      throw new Test262Error(message);
    }
    return;
  }

  message += 'Expected a ' + expectedErrorConstructor.name + ' to be thrown but no exception was thrown at all';
  throw new Test262Error(message);
};

assert._toString = function (value) {
  try {
    if (value === 0 && 1 / value === -Infinity) {
      return '-0';
    }

    return String(value);
  } catch (err) {
    if (err.name === 'TypeError') {
      return Object.prototype.toString.call(value);
    }

    throw err;
  }
};

// Copyright (c) 2012 Ecma International.  All rights reserved.
// This code is governed by the BSD license found in the LICENSE file.
/*---
description: |
    Provides both:

    - An error class to avoid false positives when testing for thrown exceptions
    - A function to explicitly throw an exception using the Test262Error class
defines: [Test262Error, $DONOTEVALUATE]
---*/


function Test262Error(message) {
  this.message = message || "";
}

Test262Error.prototype.toString = function () {
  return "Test262Error: " + this.message;
};

Test262Error.thrower = (message) => {
  throw new Test262Error(message);
};

function $DONOTEVALUATE() {
  throw "Test262: This statement should not be evaluated.";
}

// Copyright 2009 the Sputnik authors.  All rights reserved.
// This code is governed by the BSD license found in the LICENSE file.

/*---
info: "CharacterEscapeSequnce :: NonEscapeSequence"
es5id: 7.8.4_A4.2_T2
description: "NonEscapeSequence :: ENGLISH CAPITAL ALPHABET"
---*/

//CHECK#A-Z
if ("A" !== "\A") {
  throw new Test262Error('#A');
}

if ("B" !== "\B") {
  throw new Test262Error('#B');
}

if ("C" !== "\C") {
  throw new Test262Error('#C');
}

if ("D" !== "\D") {
  throw new Test262Error('#D');
}

if ("E" !== "\E") {
  throw new Test262Error('#E');
}

if ("F" !== "\F") {
  throw new Test262Error('#F');
}

if ("G" !== "\G") {
  throw new Test262Error('#G');
}

if ("H" !== "\H") {
  throw new Test262Error('#H');
}

if ("I" !== "\I") {
  throw new Test262Error('#I');
}

if ("J" !== "\J") {
  throw new Test262Error('#J');
}

if ("K" !== "\K") {
  throw new Test262Error('#K');
}

if ("L" !== "\L") {
  throw new Test262Error('#L');
}

if ("M" !== "\M") {
  throw new Test262Error('#M');
}

if ("N" !== "\N") {
  throw new Test262Error('#N');
}

if ("O" !== "\O") {
  throw new Test262Error('#O');
}

if ("P" !== "\P") {
  throw new Test262Error('#P');
}

if ("Q" !== "\Q") {
  throw new Test262Error('#Q');
}

if ("R" !== "\R") {
  throw new Test262Error('#R');
}

if ("S" !== "\S") {
  throw new Test262Error('#S');
}

if ("T" !== "\T") {
  throw new Test262Error('#T');
}

if ("U" !== "\U") {
  throw new Test262Error('#U');
}

if ("V" !== "\V") {
  throw new Test262Error('#V');
}

if ("W" !== "\W") {
  throw new Test262Error('#W');
}

if ("X" !== "\X") {
  throw new Test262Error('#X');
}

if ("Y" !== "\Y") {
  throw new Test262Error('#Y');
}

if ("Z" !== "\Z") {
  throw new Test262Error('#Z');
}

